@@ -135,7 +135,7 @@ Such environment variables have the following meaning:
 - ``service_url``:backend services address, typically set to ``http://localhost:8080/knowage``,
 - ``host_url``: frontend services address, the one the user types in his browser.
 - ``hmacKey``: secret key to generate JWT tokens used by the default security mechanism. You **must change** it, and **do not distribute** it.
-- ``password_encryption_secret``: File used for password encryption. The file must contain random text of any length. This is a security configuration, so don't use short strings. For example, you can create a file and write text into it. **Do not distribute** it for any reason.
+- ``password_encryption_secret``: File used for password encryption. The file must contain random text of any length. This is a security configuration, so don't use short strings. For example, you can create a file and write text into it. **Do not distribute** it for any reason, create at least a backup copy of the file. **After the first start of Knowage, it will no longer be possible to change the secret key.**
 
 
 .. important::
@@ -152,9 +152,29 @@ Below you can see an example of configuration of the above variables in the serv
   <Environment name="sso_class" type="java.lang.String" value="it.eng.spagobi.services.common.JWTSsoService"/>
   <Environment name="host_url" type="java.lang.String" value="http://localhost:8080"/>
   <Environment name="service_url" type="java.lang.String" value="http://localhost:8080/knowage"/>
-  <Environment name="hmacKey" description="HMAC key" type="java.lang.String" value="<value_to_replace>"/>
+  <Environment name="hmacKey" description="HMAC key" type="java.lang.String" value="…PUT_HMACKEY_VALUE_HERE…"/>
   <Environment name="password_encryption_secret" description="File for security encryption location"
     type="java.lang.String" value="${catalina.home}/conf/knowage.secret"/>
+
+Recommended configuration
+~~~~~~~~~~~~~~~~~~~~~~~~~
+
+Edit ``TOMCAT_HOME/conf/setenv.sh`` (Linux) or ``TOMCAT_HOME/conf/setenv.bat`` (Windows) file in Tomcat by adding the following JVM arguments:
+
+.. code-block:: xml
+        :linenos:
+
+        export JAVA_OPTS="$JAVA_OPTS -Dfile.encoding=UTF-8"
+
+        # We add -Duser.timezone=UTC to solve error when establishing connection to Oracle metadata database:
+        # java.sql.SQLException: ORA-00604: error occurred at recursive SQL level 1
+        # ORA-01882: timezone region not found
+
+        export JAVA_OPTS="$JAVA_OPTS -Duser.timezone=UTC"
+
+        export JAVA_OPTS="$JAVA_OPTS -Djava.awt.headless=true"
+
+        export JAVA_OPTS="$JAVA_OPTS -Djava.security.manager -Djava.security.policy=$CATALINA_HOME/conf/catalina-relaxed.policy"
 
 
 Applications deploy
@@ -163,7 +183,7 @@ To deploy Knowage you have to copy all the WAR files inside the ``TOMCAT_HOME/we
 Once the first start is ended each WAR file will be unzipped. It is also possible to unzip the WAR files manually using the unzip utility.
 
 
-Thread pool defintion
+Thread pool definition
 ~~~~~~~~~~~~~~~~~~~~~~
 You must configure ``TOMCAT_HOME/conf/server.xml`` file and add the settings related to the pool of thread editing the ``GlobalNamingResources`` tag, as shown follow.
 
@@ -192,16 +212,14 @@ It is recommended to increase the memory dimension used by the application serve
 	:linenos:
 
 	set JAVA_OPTS= %JAVA_OPTS% -Xms1024m Xmx2048m -XX:MaxPermSize=512m
-	
+
 Advanced Connector settings
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 .. important::
          It is highly recommend to add  URIEncoding="UTF-8" attribute to server.xml file connector tags in order to avoid special characters issues.
-	 
+
 .. code-block:: bash
 	:linenos:
 
 	<Connector address="0.0.0.0" port="8009" protocol="AJP/1.3" maxPostSize="2097152000" redirectPort="8443" URIEncoding="UTF-8" />
-
-	 
